<resources>
    <string name="app_name">Calculator</string>
    <string name="_7">7</string>
    <string name="ac">AC</string>
    <string name="_equalsToSign">=</string>
    <string name="_plusSign">+</string>
    <string name="_divisionSign">/</string>
    <string name="_powerSign">^</string>
    <string name="_closeParenthesisSign">)</string>
    <string name="_openParenthesisSign">(</string>
    <string name="equation">Equation</string>
    <string name="_decimalPoint">.</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_subtractionSign">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="x">x</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="del">DEL</string>
    <string name="matrix">Matrix</string>
    <string name="history">HISTORY</string>
    <string name="back">back</string>
    <string name="normal">normal</string>
    <string name="enter">enter</string>
    <string name="delete">delete</string>
    <string name="channel_name">DEFAULTR</string>
    <string name="channel_description">DEFAULT</string>
</resources>